--- a/index.html
+++ b/index.html
@@ -47,34 +47,56 @@
             <p class="description__boot">Unisex Skateboarding Shoe</p>
 
             <div class="checkboxes__stars">
-              <input type="checkbox" name="star" id="one__star" checked>
+              <input type="checkbox" name="star" id="one__star">
               <label for="one__star" class="checkbox__label"></label>
 
-              <input type="checkbox" name="star" id="two__stars" checked>
+              <input type="checkbox" name="star" id="two__stars">
               <label for="two__stars" class="checkbox__label"></label>
+              <div class="one__star__block">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+              </div>
 
-              <input type="checkbox" name="star" id="three__stars" checked>
+              <input type="checkbox" name="star" id="three__stars">
               <label for="three__stars" class="checkbox__label"></label>
+              <div class="two__stars__block">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+              </div>
 
               <input type="checkbox" name="star" id="four__stars">
               <label for="four__stars" class="checkbox__label"></label>
+              <div class="three__stars__block">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+              </div>
 
               <input type="checkbox" name="star" id="five__stars">
               <label for="five__stars" class="checkbox__label"></label>
+              <div class="four__stars__block">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+                <img src="images/gold_star.png" alt="gold star" class="gold__star__image">
+              </div>
             </div>
 
-            <div class="size__quantity">
-              <select name="size" class="boot__size">
-                <option value="Size">Size</option>
-                <option value="6.5">6.5</option>
-                <option value="8.0">8.0</option>
-              </select>
+            <div class="select__size__quantity__block">
+              <div class="select__size__block">
+                <select name="size" class="boot__size">
+                  <option value="Size">Size</option>
+                  <option value="6.5">6.5</option>
+                  <option value="8.0">8.0</option>
+                </select>
+              </div>
 
-              <select name="quantity" class="boot__quantity">
-                <option value="Qty">Qty</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-              </select>
+              <div class="select__quantity__block">
+                <select name="quantity" class="boot__quantity">
+                  <option value="Qty">Qty</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                </select>
+              </div>
             </div>
 
             <input type="submit" value="Add to cart">
